# vulkan-minimal

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  basic_shader.ps.hlsl  basic_shader.vs.hlsl  uv_grid.dds  vcpkg.json  vk-min-src.cpp
